crates/forgedthoughts/tests/fixtures/parse_err/missing_semicolon.ft
var s = Sphere{}
s.x = 1;
